--- a/13b.html
+++ b/13b.html
@@ -39,8 +39,8 @@
     <br><br>
 
     <h3>Foto</h3>
-    <img src="https://i.pinimg.com/1200x/20/4d/79/204d792f2fe0928b9dd0d27fee708fed.jpg"
-        width="200" alt="Contoh Foto">
+    <img src="https://picsum.photos/200"
+     width="200" alt="Foto Contoh Baru">
 
     <script>
         function tampilkanNama() {
