--- a/uas/index.html
+++ b/uas/index.html
@@ -10,44 +10,81 @@
         }
 
         body {
-            min-height: 100vh;
             margin: 0;
-            background: linear-gradient(135deg, #667eea, #764ba2);
+            min-height: 100vh;
+            background: #eaeaea;
             display: flex;
             justify-content: center;
             align-items: center;
         }
 
-        .card {
-            background: #ffffff;
-            width: 340px;
-            padding: 25px;
-            border-radius: 12px;
-            box-shadow: 0 15px 35px rgba(0,0,0,0.2);
-            animation: fadeIn 0.6s ease;
+        .wrapper {
+            width: 800px;
+            height: 420px;
+            background: #fff;
+            display: flex;
+            border-radius: 15px;
+            overflow: hidden;
+            box-shadow: 0 25px 50px rgba(0,0,0,0.25);
         }
 
-        h2 {
-            text-align: center;
-            color: #4a4a4a;
+        /* PANEL KIRI */
+        .left {
+            width: 45%;
+            background: linear-gradient(135deg, #ff512f, #dd2476);
+            color: white;
+            padding: 40px 30px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+
+        .left h1 {
+            margin: 0;
+            font-size: 28px;
+        }
+
+        .left p {
+            margin-top: 15px;
+            line-height: 1.6;
+            opacity: 0.9;
+        }
+
+        /* PANEL KANAN */
+        .right {
+            width: 55%;
+            padding: 40px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+
+        .right h2 {
+            margin-bottom: 20px;
+            color: #333;
         }
 
         input {
             width: 100%;
-            padding: 10px;
-            margin-top: 12px;
+            padding: 12px;
+            margin-bottom: 15px;
             border-radius: 8px;
-            border: 1px solid #ddd;
+            border: 2px solid #ddd;
             font-size: 14px;
+            transition: 0.3s;
+        }
+
+        input:focus {
+            border-color: #dd2476;
+            outline: none;
+            box-shadow: 0 0 0 3px rgba(221,36,118,0.2);
         }
 
         button {
-            width: 100%;
-            padding: 10px;
-            margin-top: 16px;
+            padding: 12px;
             border: none;
             border-radius: 8px;
-            background: linear-gradient(135deg, #667eea, #764ba2);
+            background: linear-gradient(135deg, #ff512f, #dd2476);
             color: white;
             font-size: 15px;
             cursor: pointer;
@@ -55,40 +92,52 @@
         }
 
         button:hover {
-            opacity: 0.9;
             transform: translateY(-2px);
+            box-shadow: 0 10px 20px rgba(221,36,118,0.4);
         }
 
-        .user-info {
+        .user-page {
             text-align: center;
-            color: #333;
-            line-height: 1.6;
         }
 
         .logout {
-            background: linear-gradient(135deg, #ff416c, #ff4b2b);
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(15px); }
-            to { opacity: 1; transform: translateY(0); }
+            margin-top: 20px;
+            background: linear-gradient(135deg, #36d1dc, #5b86e5);
         }
 
     </style>
 </head>
 <body>
 
-<div class="card" id="loginPage">
-    <h2>🔐 Login</h2>
-    <input type="text" id="username" placeholder="Username">
-    <input type="password" id="password" placeholder="Password">
-    <button onclick="app.login()">Masuk</button>
+<div class="wrapper" id="loginPage">
+    <div class="left">
+        <h1>Welcome Back 👋</h1>
+        <p>
+            Silakan login untuk mengakses halaman user.
+            Aplikasi login sederhana menggunakan JavaScript OOP
+            dan localStorage.
+        </p>
+    </div>
+
+    <div class="right">
+        <h2>Login</h2>
+        <input type="text" id="username" placeholder="Username">
+        <input type="password" id="password" placeholder="Password">
+        <button onclick="app.login()">Login</button>
+    </div>
 </div>
 
-<div class="card" id="userPage" style="display:none;">
-    <h2>👋 Welcome</h2>
-    <div class="user-info" id="userInfo"></div>
-    <button class="logout" onclick="app.logout()">Logout</button>
+<div class="wrapper" id="userPage" style="display:none;">
+    <div class="left">
+        <h1>Login Berhasil 🎉</h1>
+        <p>Selamat datang di halaman user</p>
+    </div>
+
+    <div class="right user-page">
+        <h2>Info User</h2>
+        <div id="userInfo"></div>
+        <button class="logout" onclick="app.logout()">Logout</button>
+    </div>
 </div>
 
 <script>
@@ -118,7 +167,7 @@ class LoginApp {
         );
 
         if (!user) {
-            alert("UPS! nama atau password yang anda masukan salah. Silahkan coba lagi!");
+            alert("UPSS! Nama atau password yang anda masukan salah. Silahkan coba lagi!");
         } else {
             this.showUserPage(user);
         }
@@ -126,17 +175,16 @@ class LoginApp {
 
     showUserPage(user) {
         document.getElementById("loginPage").style.display = "none";
-        document.getElementById("userPage").style.display = "block";
+        document.getElementById("userPage").style.display = "flex";
         document.getElementById("userInfo").innerHTML = `
             <p><strong>Nama:</strong> ${user.nama}</p>
             <p><strong>Username:</strong> ${user.username}</p>
-            <p>Login berhasil 🎉</p>
         `;
     }
 
     logout() {
         document.getElementById("userPage").style.display = "none";
-        document.getElementById("loginPage").style.display = "block";
+        document.getElementById("loginPage").style.display = "flex";
         document.getElementById("username").value = "";
         document.getElementById("password").value = "";
     }
