--- a/UAS/index.html
+++ b/UAS/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Login App</title>
+    <title>Login App Color Swapped</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
@@ -15,7 +15,7 @@
         body {
             margin: 0;
             min-height: 100vh;
-            background: #f0f2f5;
+            background: #f4f7f6;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -28,12 +28,12 @@
             display: flex;
             border-radius: 20px;
             overflow: hidden;
-            box-shadow: 0 20px 40px rgba(0,0,0,0.15);
-            animation: fadeIn 0.6s ease-out;
+            box-shadow: 0 20px 40px rgba(0,0,0,0.1);
+            animation: slideUp 0.5s ease-out;
         }
 
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
+        @keyframes slideUp {
+            from { opacity: 0; transform: translateY(30px); }
             to { opacity: 1; transform: translateY(0); }
         }
 
@@ -48,28 +48,18 @@
             text-align: center;
         }
 
-        /* TEMA WARNA LOGIN (Biru-Ungu) */
+        /* WARNA BIRU UNTUK LOGIN */
         #loginPage .left {
-            background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
         }
 
-        /* TEMA WARNA BERHASIL (Pink-Orange) */
+        /* WARNA MERAH UNTUK LOGOUT / USER PAGE */
         #userPage .left {
-            background: linear-gradient(135deg, #ff512f, #dd2476);
+            background: linear-gradient(135deg, #cb2d3e 0%, #ef473a 100%);
         }
 
-        .left h1 {
-            margin: 0;
-            font-size: 30px;
-            font-weight: 600;
-        }
-
-        .left p {
-            margin-top: 20px;
-            font-size: 14px;
-            line-height: 1.7;
-            opacity: 0.9;
-        }
+        .left h1 { margin: 0; font-size: 28px; }
+        .left p { margin-top: 15px; font-size: 14px; opacity: 0.8; line-height: 1.6; }
 
         /* PANEL KANAN */
         .right {
@@ -81,30 +71,24 @@
             background: white;
         }
 
-        .right h2 {
-            margin-bottom: 30px;
-            color: #333;
-            font-weight: 600;
-        }
+        .right h2 { margin-bottom: 25px; color: #333; }
 
         input {
             width: 100%;
             padding: 14px;
             border-radius: 10px;
-            border: 2px solid #eee;
+            border: 2px solid #f0f0f0;
             margin-bottom: 20px;
-            font-size: 14px;
             transition: 0.3s;
         }
 
         input:focus {
-            border-color: #6a11cb;
             outline: none;
-            background: #fcfcfc;
+            border-color: #2a5298; /* Biru saat fokus di login */
         }
 
         button {
-            padding: 14px;
+            padding: 15px;
             border: none;
             border-radius: 10px;
             color: white;
@@ -114,33 +98,33 @@
             transition: 0.3s;
         }
 
-        /* Tombol di halaman Login */
+        /* Tombol Biru (Login) */
         #loginPage button {
-            background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+            background: #2a5298;
+            box-shadow: 0 5px 15px rgba(42, 82, 152, 0.3);
         }
 
-        /* Tombol di halaman User (Logout) */
+        /* Tombol Merah (Logout) */
         #userPage button {
-            background: linear-gradient(135deg, #36d1dc, #5b86e5);
+            background: #ef473a;
+            box-shadow: 0 5px 15px rgba(239, 71, 58, 0.3);
         }
 
         button:hover {
             transform: translateY(-2px);
             filter: brightness(1.1);
-            box-shadow: 0 10px 20px rgba(0,0,0,0.1);
         }
 
-        .info-box {
-            background: #fff5f8;
-            padding: 20px;
+        .user-card {
+            background: #fff5f5;
+            padding: 25px;
             border-radius: 15px;
-            border: 1px dashed #dd2476;
             margin-bottom: 25px;
-            text-align: center;
+            border: 2px solid #ef473a;
         }
 
         @media (max-width: 768px) {
-            .wrapper { flex-direction: column; width: 90%; height: auto; }
+            .wrapper { flex-direction: column; width: 95%; height: auto; }
             .left, .right { width: 100%; }
         }
     </style>
@@ -149,28 +133,26 @@
 
 <div class="wrapper" id="loginPage">
     <div class="left">
-        <h1>Welcome! 👋</h1>
-        <p>Silakan masuk untuk mengakses fitur lengkap aplikasi kami.</p>
+        <h1>Welcome Back!</h1>
+        <p>Gunakan akun Anda untuk masuk ke sistem.</p>
     </div>
-
     <div class="right">
-        <h2>Sign In</h2>
+        <h2>Login</h2>
         <input type="text" id="username" placeholder="Username">
         <input type="password" id="password" placeholder="Password">
-        <button onclick="app.login()">Login Sekarang</button>
+        <button onclick="app.login()">Masuk ke Akun</button>
     </div>
 </div>
 
 <div class="wrapper" id="userPage" style="display:none;">
     <div class="left">
-        <h1>Yey! Berhasil 🎉</h1>
-        <p>Selamat! Akun Anda telah terverifikasi. Nikmati pengalaman menjelajah di aplikasi kami.</p>
+        <h1>Akses Berhasil!</h1>
+        <p>Anda telah masuk dengan aman ke dalam dashboard.</p>
     </div>
-
-    <div class="right">
-        <h2 style="text-align: center;">Profil Anda</h2>
-        <div class="info-box" id="userInfo"></div>
-        <button onclick="app.logout()">Keluar Aplikasi</button>
+    <div class="right" style="text-align: center;">
+        <h2>Data Pengguna</h2>
+        <div class="user-card" id="userInfo"></div>
+        <button onclick="app.logout()">Logout Sekarang</button>
     </div>
 </div>
 
@@ -194,8 +176,8 @@ class LoginApp {
     login() {
         const username = document.getElementById("username").value.trim();
         const password = document.getElementById("password").value.trim();
-
         const users = JSON.parse(localStorage.getItem("users"));
+        
         const user = users.find(u => u.username === username && u.password === password);
 
         if (!user) {
@@ -209,8 +191,8 @@ class LoginApp {
         document.getElementById("loginPage").style.display = "none";
         document.getElementById("userPage").style.display = "flex";
         document.getElementById("userInfo").innerHTML = `
-            <p style="margin:0; color:#dd2476; font-weight:600; font-size:18px;">${user.nama}</p>
-            <small style="color:#777;">ID: ${user.username}</small>
+            <h3 style="margin:0; color:#cb2d3e;">${user.nama}</h3>
+            <p style="margin:5px 0; color:#666;">Username: ${user.username}</p>
         `;
     }
 
