--- a/uas/index.html
+++ b/uas/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login App Color Swapped</title>
+    <title>Login App Modern</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
@@ -15,7 +15,7 @@
         body {
             margin: 0;
             min-height: 100vh;
-            background: #f4f7f6;
+            background: #f0f2f5;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -29,12 +29,6 @@
             border-radius: 20px;
             overflow: hidden;
             box-shadow: 0 20px 40px rgba(0,0,0,0.1);
-            animation: slideUp 0.5s ease-out;
-        }
-
-        @keyframes slideUp {
-            from { opacity: 0; transform: translateY(30px); }
-            to { opacity: 1; transform: translateY(0); }
         }
 
         /* PANEL KIRI */
@@ -48,18 +42,24 @@
             text-align: center;
         }
 
-        /* WARNA BIRU UNTUK LOGIN */
+        /* Login: Biru */
         #loginPage .left {
             background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
         }
 
-        /* WARNA MERAH UNTUK LOGOUT / USER PAGE */
+        /* User Page: Merah Soft/Muted agar tidak terlalu tajam */
         #userPage .left {
-            background: linear-gradient(135deg, #cb2d3e 0%, #ef473a 100%);
+            background: linear-gradient(135deg, #5d4157 0%, #a8caba 100%); /* Warna kombinasi tenang */
+            background: linear-gradient(135deg, #485563 0%, #29323c 100%); /* Atau warna gelap elegan */
+        }
+        
+        /* Jika ingin tetap ada unsur merah tapi soft di panel kiri user */
+        #userPage .left {
+            background: linear-gradient(135deg, #e55d87 0%, #5fc3e4 100%); 
         }
 
         .left h1 { margin: 0; font-size: 28px; }
-        .left p { margin-top: 15px; font-size: 14px; opacity: 0.8; line-height: 1.6; }
+        .left p { margin-top: 15px; font-size: 14px; opacity: 0.9; }
 
         /* PANEL KANAN */
         .right {
@@ -71,20 +71,12 @@
             background: white;
         }
 
-        .right h2 { margin-bottom: 25px; color: #333; }
-
         input {
             width: 100%;
             padding: 14px;
             border-radius: 10px;
-            border: 2px solid #f0f0f0;
+            border: 2px solid #eee;
             margin-bottom: 20px;
-            transition: 0.3s;
-        }
-
-        input:focus {
-            outline: none;
-            border-color: #2a5298; /* Biru saat fokus di login */
         }
 
         button {
@@ -98,34 +90,28 @@
             transition: 0.3s;
         }
 
-        /* Tombol Biru (Login) */
+        /* Tombol Biru Login */
         #loginPage button {
             background: #2a5298;
-            box-shadow: 0 5px 15px rgba(42, 82, 152, 0.3);
         }
 
-        /* Tombol Merah (Logout) */
-        #userPage button {
-            background: #ef473a;
-            box-shadow: 0 5px 15px rgba(239, 71, 58, 0.3);
+        /* Tombol Logout Merah (Hanya Button) */
+        .btn-logout {
+            background: #e74c3c; /* Merah Flat yang bersih */
+            margin-top: 10px;
         }
 
         button:hover {
+            opacity: 0.9;
             transform: translateY(-2px);
-            filter: brightness(1.1);
         }
 
-        .user-card {
-            background: #fff5f5;
-            padding: 25px;
-            border-radius: 15px;
-            margin-bottom: 25px;
-            border: 2px solid #ef473a;
-        }
-
-        @media (max-width: 768px) {
-            .wrapper { flex-direction: column; width: 95%; height: auto; }
-            .left, .right { width: 100%; }
+        .user-info-display {
+            padding: 20px;
+            border-radius: 12px;
+            background: #f9f9f9;
+            margin-bottom: 20px;
+            border: 1px solid #ddd;
         }
     </style>
 </head>
@@ -133,26 +119,26 @@
 
 <div class="wrapper" id="loginPage">
     <div class="left">
-        <h1>Welcome Back!</h1>
-        <p>Gunakan akun Anda untuk masuk ke sistem.</p>
+        <h1>Welcome!</h1>
+        <p>Silakan masuk ke akun Anda.</p>
     </div>
     <div class="right">
-        <h2>Login</h2>
+        <h2 style="color: #2a5298;">Login</h2>
         <input type="text" id="username" placeholder="Username">
         <input type="password" id="password" placeholder="Password">
-        <button onclick="app.login()">Masuk ke Akun</button>
+        <button onclick="app.login()">Masuk Sekarang</button>
     </div>
 </div>
 
 <div class="wrapper" id="userPage" style="display:none;">
     <div class="left">
-        <h1>Akses Berhasil!</h1>
-        <p>Anda telah masuk dengan aman ke dalam dashboard.</p>
+        <h1>Dashboard</h1>
+        <p>Anda berhasil masuk ke sistem.</p>
     </div>
     <div class="right" style="text-align: center;">
-        <h2>Data Pengguna</h2>
-        <div class="user-card" id="userInfo"></div>
-        <button onclick="app.logout()">Logout Sekarang</button>
+        <h2>Profil Pengguna</h2>
+        <div class="user-info-display" id="userInfo"></div>
+        <button class="btn-logout" onclick="app.logout()">Keluar (Logout)</button>
     </div>
 </div>
 
@@ -166,8 +152,7 @@ class LoginApp {
         if (!localStorage.getItem("users")) {
             const users = [
                 { username: "rony", password: "123", nama: "Rony Parulian" },
-                { username: "salma", password: "456", nama: "Salma Salsabil" },
-                { username: "parulian", password: "789", nama: "Parulian" }
+                { username: "salma", password: "456", nama: "Salma Salsabil" }
             ];
             localStorage.setItem("users", JSON.stringify(users));
         }
@@ -177,7 +162,6 @@ class LoginApp {
         const username = document.getElementById("username").value.trim();
         const password = document.getElementById("password").value.trim();
         const users = JSON.parse(localStorage.getItem("users"));
-        
         const user = users.find(u => u.username === username && u.password === password);
 
         if (!user) {
@@ -191,8 +175,8 @@ class LoginApp {
         document.getElementById("loginPage").style.display = "none";
         document.getElementById("userPage").style.display = "flex";
         document.getElementById("userInfo").innerHTML = `
-            <h3 style="margin:0; color:#cb2d3e;">${user.nama}</h3>
-            <p style="margin:5px 0; color:#666;">Username: ${user.username}</p>
+            <h3 style="margin:0;">${user.nama}</h3>
+            <p style="color:#666;">@${user.username}</p>
         `;
     }
 
