--- a/uas/index.html
+++ b/uas/index.html
@@ -29,6 +29,12 @@
             border-radius: 20px;
             overflow: hidden;
             box-shadow: 0 20px 40px rgba(0,0,0,0.1);
+            animation: fadeIn 0.5s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
         /* PANEL KIRI */
@@ -42,24 +48,18 @@
             text-align: center;
         }
 
-        /* Login: Biru */
+        /* Login Page: Biru Gradasi */
         #loginPage .left {
             background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
         }
 
-        /* User Page: Merah Soft/Muted agar tidak terlalu tajam */
+        /* User Page: Hijau Toska / Teal (Lebih adem) */
         #userPage .left {
-            background: linear-gradient(135deg, #5d4157 0%, #a8caba 100%); /* Warna kombinasi tenang */
-            background: linear-gradient(135deg, #485563 0%, #29323c 100%); /* Atau warna gelap elegan */
-        }
-        
-        /* Jika ingin tetap ada unsur merah tapi soft di panel kiri user */
-        #userPage .left {
-            background: linear-gradient(135deg, #e55d87 0%, #5fc3e4 100%); 
+            background: linear-gradient(135deg, #00b09b 0%, #96c93d 100%);
         }
 
         .left h1 { margin: 0; font-size: 28px; }
-        .left p { margin-top: 15px; font-size: 14px; opacity: 0.9; }
+        .left p { margin-top: 15px; font-size: 14px; opacity: 0.9; line-height: 1.6; }
 
         /* PANEL KANAN */
         .right {
@@ -71,12 +71,21 @@
             background: white;
         }
 
+        .right h2 { margin-bottom: 25px; font-weight: 600; }
+
         input {
             width: 100%;
             padding: 14px;
             border-radius: 10px;
             border: 2px solid #eee;
             margin-bottom: 20px;
+            font-size: 14px;
+            transition: 0.3s;
+        }
+
+        input:focus {
+            outline: none;
+            border-color: #2a5298;
         }
 
         button {
@@ -91,13 +100,14 @@
         }
 
         /* Tombol Biru Login */
-        #loginPage button {
+        .btn-login {
             background: #2a5298;
+            box-shadow: 0 4px 12px rgba(42, 82, 152, 0.2);
         }
 
-        /* Tombol Logout Merah (Hanya Button) */
+        /* Tombol Logout Biasa (Abu-abu Tua) */
         .btn-logout {
-            background: #e74c3c; /* Merah Flat yang bersih */
+            background: #555; /* Warna netral yang biasa digunakan */
             margin-top: 10px;
         }
 
@@ -106,12 +116,17 @@
             transform: translateY(-2px);
         }
 
-        .user-info-display {
-            padding: 20px;
-            border-radius: 12px;
-            background: #f9f9f9;
+        .user-card {
+            padding: 30px;
+            border-radius: 15px;
+            background: #f8f9fa;
+            border: 1px solid #e9ecef;
             margin-bottom: 20px;
-            border: 1px solid #ddd;
+        }
+
+        @media (max-width: 768px) {
+            .wrapper { flex-direction: column; width: 95%; height: auto; }
+            .left, .right { width: 100%; }
         }
     </style>
 </head>
@@ -120,25 +135,25 @@
 <div class="wrapper" id="loginPage">
     <div class="left">
         <h1>Welcome!</h1>
-        <p>Silakan masuk ke akun Anda.</p>
+        <p>Silakan masuk untuk mengakses dashboard Anda.</p>
     </div>
     <div class="right">
         <h2 style="color: #2a5298;">Login</h2>
         <input type="text" id="username" placeholder="Username">
         <input type="password" id="password" placeholder="Password">
-        <button onclick="app.login()">Masuk Sekarang</button>
+        <button class="btn-login" onclick="app.login()">Masuk Sekarang</button>
     </div>
 </div>
 
 <div class="wrapper" id="userPage" style="display:none;">
     <div class="left">
         <h1>Dashboard</h1>
-        <p>Anda berhasil masuk ke sistem.</p>
+        <p>Anda telah masuk ke dalam akun pribadi Anda.</p>
     </div>
     <div class="right" style="text-align: center;">
-        <h2>Profil Pengguna</h2>
-        <div class="user-info-display" id="userInfo"></div>
-        <button class="btn-logout" onclick="app.logout()">Keluar (Logout)</button>
+        <h2 style="color: #333;">Data Profil</h2>
+        <div class="user-card" id="userInfo"></div>
+        <button class="btn-logout" onclick="app.logout()">Keluar Akun</button>
     </div>
 </div>
 
@@ -175,8 +190,8 @@ class LoginApp {
         document.getElementById("loginPage").style.display = "none";
         document.getElementById("userPage").style.display = "flex";
         document.getElementById("userInfo").innerHTML = `
-            <h3 style="margin:0;">${user.nama}</h3>
-            <p style="color:#666;">@${user.username}</p>
+            <h3 style="margin:0; color:#333;">${user.nama}</h3>
+            <p style="margin:5px 0; color:#777;">ID: ${user.username}</p>
         `;
     }
 
